--- a/package.json
+++ b/package.json
@@ -7,15 +7,33 @@
     "packages/*"
   ],
   "scripts": {
-    "build:rollup": "rollup --config ./config/rollup.config.js"
+    "build:rollup": "NODE_ENV=production rollup --config ./config/rollup.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@moonship-fe/core": "*",
+    "@moonship-fe/editor": "*",
+    "@moonship-fe/slate": "*",
+    "@moonship-fe/slate-history": "*",
+    "@moonship-fe/slate-hyperscript": "*",
+    "@moonship-fe/slate-react": "*",
     "lerna": "^4.0.0",
     "lodash": "^4.17.21",
     "rollup": "^2.47.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0"
   }
 }
