--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "packages/*"
   ],
   "scripts": {
-    "build:rollup": "NODE_ENV=production rollup --config ./config/rollup.config.js"
+    "build:rollup": "NODE_ENV=production rollup --config ./config/rollup.config.js",
+    "serve": "cd ./site && next",
+    "fix": "yarn fix:prettier && yarn fix:eslint",
+    "fix:eslint": "yarn lint:eslint --fix",
+    "fix:prettier": "yarn lint:prettier --write",
+    "lint:eslint": "eslint \"./{packages,site}/**/*.{js,jsx,ts,tsx}\"",
+    "lint:prettier": "prettier --check \"**/*.{css,md,js,jsx,json,ts,tsx}\""
   },
   "keywords": [],
   "author": "",
@@ -19,13 +25,18 @@
     "@moonship-fe/slate-history": "*",
     "@moonship-fe/slate-hyperscript": "*",
     "@moonship-fe/slate-react": "*",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "lerna": "^4.0.0",
     "lodash": "^4.17.21",
-    "rollup": "^2.47.0",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
+    "next": "^10.2.0",
     "react": "^17.0.2",
+    "rollup": "^2.47.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
@@ -34,6 +45,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0"
+    "rollup-plugin-typescript2": "^0.30.0",
+    "source-map-loader": "^2.0.1",
+    "typescript": "^4.2.4"
   }
 }
