--- a/packages/slate-hyperscript/tsconfig.json
+++ b/packages/slate-hyperscript/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../config/typescript/tsconfig.json",
+  "extends": "../../config/tsconfig.json",
   "include": ["src/**/*"],
   "compilerOptions": {
     "rootDir": "./src",
