--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@moonship-fe/slate-history": "*",
     "@moonship-fe/slate-hyperscript": "*",
     "@moonship-fe/slate-react": "*",
+    "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
@@ -36,7 +39,9 @@
     "lerna": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "^10.2.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.47.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -48,7 +53,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "source-map-loader": "^2.0.1",
-    "typescript": "^4.2.4",
-    "prettier": "^2.2.1"
+    "typescript": "^4.2.4"
   }
 }
